...
            {
              number: '1.1',
              text: 'Bản Điều khoản và Điều kiện sử dụng dịch vụ ngân hàng điện tử (sau đây gọi tắt là "Điều khoản") quy định về quyền, nghĩa vụ, trách nhiệm pháp lý và các quy tắc giao dịch giữa Ngân hàng TMCP Sen Hồng (sau đây gọi là "SenBank") và Khách hàng cá nhân, tổ chức khi đăng ký, mở, kích hoạt, quản lý và sử dụng các dịch vụ ngân hàng số, ví điện tử, thanh toán không tiền mặt trên ứng dụ
            },
            {
              number: '1.2',
              text: 'Việc Khách hàng nhấn chọn nút "Tôi đồng ý", "Xác nhận", "Tiếp tục" trong quá trình cài đặt, đăng ký hoặc thực hiện bất kỳ thao tác đăng nhập, giao dịch tài chính nào trên hệ thống được coi là bằng chứng pháp lý xác thực, thể hiện sự đồng thuận tự nguyện, vô điều kiện và không thể hủy ngang đối với toàn bộ nội dung của bản Điều khoản này cùng các văn bản sửa đổi, bổ sung công b
            },
            {
              number: '1.3',
              text: 'Các Điều khoản này tạo thành một hợp đồng dịch vụ điện tử có giá trị pháp lý ràng buộc giữa SenBank và Khách hàng theo quy định của Luật Giao dịch điện tử và Bộ luật Dân sự nước Cộng hòa Xã hội Chủ nghĩa Việt Nam.',
            },
          ],
...
