...
                            blurOnSubmit={false}
                          />
                        </View>
                      </>
                    )}

                    <AppText style={[styles.label, isRemembered && { display: 'none' }]}>Mật khẩu</AppText>
                    <View style={[styles.inputWrapper, isRemembered && { backgroundColor: 'transparent', borderTopWidth: 0, borderLeftWidth: 0, borderRightWidth: 0, borderBottomWidth: 1, borderBottomColor: 'rgba(255, 255, 255, 0.35)', borderRadius: 0, paddingHorizontal: 0, height: 46 }]}>
                      {!isRemembered && <Ionicons name="lock-closed-outline" size={20} color="#FFFFFF" style={styles.inputIcon} />}
                      <TextInput
                        ref={passwordRef}
                        style={[styles.input, isRemembered && { fontSize: 18, paddingLeft: 4 }]}
                        placeholder={isRemembered ? "Mật khẩu" : "Nhập mật khẩu"}
...
